src/main/java/com/example/sqlvericek/Error/ErrorsTypeModel/ErrorsType.java
package com.example.sqlvericek.Error.ErrorsTypeModel;

public class ErrorsType {
    private ErrorType error;

    public ErrorType getError() {
        return error;
    }

    public void setError(ErrorType value) {
        this.error = value;
    }
}
